# plugin-keyremap

./: .gitignore  Cargo.toml  Makefile  README.md  config.json  plugin.toml  qol-config.toml
config/: default.json  default.toml
src/: app_tracker.rs  config.rs  daemon.rs  keycode.rs  main.rs  remap.rs  tap.rs
ui/: app.js  index.html  style.css
ui/components/: App.js  AppPicker.js  CharRules.js  CharSwaps.js  EnableToggle.js  ExcludedApps.js  KeyRules.js  ModChips.js  MouseRules.js  SaveBar.js  ScrollRules.js
ui/hooks/: useApps.js  useConfig.js
ui/lib/: html.js
ui/schemas/: da-DK.json  de-DE.json  manifest.json
