[package]
name = "keyremap"
version = "0.1.0"
edition = "2021"
description = "Keyboard and mouse remapping plugin for QoL Tray"
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
qol-config = { git = "https://github.com/qol-tools/qol-config" }
qol-plugin-api = { git = "https://github.com/qol-tools/qol-plugin-api", default-features = false }
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
foreign-types-shared = "0.3"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSObject"] }
objc2-app-kit = { version = "0.3", features = [
  "NSWorkspace",
  "NSRunningApplication",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
proptest = "1.10.0"
toml = "0.9"
qol-tray = { git = "https://github.com/qol-tools/qol-tray" }
